--- a/.github/workflows/cypress-ci.yml
+++ b/.github/workflows/cypress-ci.yml
@@ -1,42 +1,40 @@
-name: Cypress Tests and Deploy Report
+name: Cypress E2E Tests & Report
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  cypress-run:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install Dependencies
+        run: npm ci
 
-      - name: Run Cypress tests with video
-        run: npm run test:run
+      - name: Run Cypress Tests
+        run: npm run test:report
+        env:
+          CI: true
 
-      - name: Generate HTML report
-        run: |
-          npm run report:merge
-          npm run report:generate
-
-      - name: Copy report and videos to public/
-        run: |
-          mkdir -p public/videos
-          cp -r cypress/videos/* public/videos/ || echo "No videos to copy"
-          cp cypress/reports/html/merged-report.html public/index.html
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Archive Videos
+        uses: actions/upload-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          name: cypress-videos
+          path: cypress/videos
+
+      - name: Archive Mochawesome HTML Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: mochawesome-report
+          path: mochawesome-report
